--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
-    <script defer src="app.js"></script>
+    <title>Typo 2.0</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
 <body>
 
-    <ul>
-        
-    </ul>
 
-    <input placeholder="message">
-    <button>Send</button>
     
+    <div id="app">
+    <header>
+        <nav class="grey darken-3">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Logo</a>
+                <ul id="nav-mobile" class="right hide-on-small-only">
+                <li><router-link to="/play">Play</router-link></li>
+                <li><router-link to="/rooms">Rooms</router-link></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <router-view></router-view>
+    </main>
+
+    </div>
+
+
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
+    <script defer src="app.js"></script>
 </body>
 </html>
